# PDFPlay

./: .gitignore  LICENSE  MANIFEST.in  README.md  notes  requirements.txt  rough.ipynb  setup.cfg  setup.py  wms.txt
source/: x.txt
source/pdf_play/: __init__.py  __main__.py  __settings__.py  _version.py
source/pdf_play/core/: __init__.py  __settings__.py  _pdf.py  _tests.py  _watermark.py
source/pdf_play/helpers/: __init__.py  _input_actions.py  _input_types.py  _parser.py  _utils.py  arguments_parser.py
source/watermark_pdf/: __init__.py  __main__.py  __settings__.py
source/watermark_pdf/core/: pdf.py  water_mark.py
tests/: __init__.py  parser_tests.py  pdf.py  rough.py
tests/.data/: sample_mto.xlsx  sample_target.csv  sample_target.xlsx  wm_input.csv
