[metadata]
name = pdf-play
version = 0.0.1-alpha
author = Mandeep Singh
author_email = singh.mandeep2207@gmail.com
description = PDF utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudoMode/PDFPlat
project_urls =
    Source = https://github.com/sudoMode/PDFPlay
    Bug Tracker = https://github.com/sudoMode/PDFPlay/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Systematic Traders
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
license = MIT
keywords = pdf

[options]
include_package_data = True
package_dir =
    = source
packages = find:
python_requires = >=3.6
;install_requires = pandas

[options.packages.find]
where = source

[options.entry_points]
console_scripts =
    pdf-play = pdf_play:main
